OnboardingApp/force-app/main/default/objects/JK_FamilyInfo__c/fields/EmpToFi__c.field-meta.xml
<CustomField>
    <fullName>EmpToFi__c</fullName>
    <label>EmpToFi</label>
    <referenceTo>JK_Employee__c</referenceTo>
    <relationshipLabel>JK_Familys</relationshipLabel>
    <relationshipName>JK_Familys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>