OnboardingApp/force-app/main/default/objects/JK_FamilyInfo__c/fields/Fi_firstName__c.field-meta.xml
<CustomField>
    <fullName>Fi_firstName__c</fullName>
    <label>Fi_firstName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>