OnboardingApp/force-app/main/default/objects/JK_FamilyInfo__c/fields/Fi_middleName__c.field-meta.xml
<CustomField>
    <fullName>Fi_middleName__c</fullName>
    <label>Fi_middleName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>