OnboardingApp/force-app/main/default/objects/JK_FamilyInfo__c/fields/Fi_relation__c.field-meta.xml
<CustomField>
    <fullName>Fi_relation__c</fullName>
    <label>Fi_relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>